fix text align right issue for list item for mobile

--- a/src/main/resources/src/utils/MainWindow/MainWindow.scss
+++ b/src/main/resources/src/utils/MainWindow/MainWindow.scss
@@ -463,7 +463,7 @@
     .main-window__list-options span {
       flex: 0 1 100%;
       width: 100%;
-      text-align: right;
+      text-align: right !important;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
